# Movie-detective

./: pyproject.toml
gemini_movie_detectives_api/: app.py
