[tool.poetry]
name = "gemini-movie-detectives-api"
version = "0.1.0"
description = ""
authors = ["Muhammed Rashid <rashid24601@gmail.com>"]
readme = "README.md"
packages = [{include = "gemini_movie_detectives_api"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.2"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
